--- a/extensions/wikidata/module/scripts/dialogs/perform-edits-dialog.html
+++ b/extensions/wikidata/module/scripts/dialogs/perform-edits-dialog.html
@@ -1,19 +1,16 @@
 <div class="dialog-frame" style="width: 800px;">
-  <div class="dialog-header" bind="dialogHeader">Peform edits on Wikidata</div>
+  <div class="dialog-header" bind="dialogHeader"></div>
   <div class="dialog-body" bind="dialogBody">
-    <p class="body-text">
-        Please review your edits before pushing them to Wikidata.
-        Consider requesting feedback at the <a href="https://www.wikidata.org/wiki/Wikidata:Data_Import_Hub">Data Import Hub</a>
-        for large datasets.
+    <p class="body-text" bind="reviewYourEdits">
     </p>
     <div class="perform-edits-warnings-area" bind="warningsArea">
     </div>
     <div class="wikibase-perform-edits-area">
-        <p>You are logged in as <span bind="loggedInUsername"></span>.</p>
-        <p>Edit summary: <input type="text" name="editSummary" bind="editSummary" class="edit-summary" value="" /></p>
+        <p><span bind="loggedInAs"></span> <span bind="loggedInUsername"></span>.</p>
+        <p><span bind="editSummaryLabel"></span> <input type="text" name="editSummary" bind="editSummary" class="edit-summary" value="" /></p>
         <div class="wikibase-login-buttons">
-            <button class="button cancel-button" bind="cancelButton">Cancel</button>
-            <button class="button button-primary" bind="performEditsButton">Perform edits</button>
+            <button class="button cancel-button" bind="cancelButton"></button>
+            <button class="button button-primary" bind="performEditsButton"></button>
         </div>
     </div>
   </div>
