--- a/extensions/wikidata/module/scripts/dialogs/manage-account-dialog.html
+++ b/extensions/wikidata/module/scripts/dialogs/manage-account-dialog.html
@@ -1,8 +1,7 @@
 <div class="dialog-frame" style="width: 800px;">
-  <div class="dialog-header" bind="dialogHeader">Wikidata account</div>
+  <div class="dialog-header" bind="dialogHeader"></div>
   <div class="dialog-body" bind="dialogBody">
-    <p class="body-text">
-      Logging in to Wikidata will allow you to perform edits directly from OpenRefine.
+    <p class="body-text" bind="explainLogIn">
     </p>
         <div class="wikibase-user-management-area">
           <div class="wikibase-user-login" bind="loginArea">
@@ -10,34 +9,34 @@
             <form bind="loginForm" class="wikibase-login-form" method="post">
               <table>
                 <tr>
-                  <td><label for="wb-username">Username:</label></td>
-                  <td><input name="wb-username" placeholder="Enter your username" type="text" /></td>
+                  <td><label for="wb-username" bind="usernameLabel"></label></td>
+                  <td><input name="wb-username" type="text" bind="usernameInput" /></td>
                 </tr>
                 <tr>
-                  <td><label for="wb-password">Password:</label></td>
-                  <td><input name="wb-password" type="password" placeholder="Enter your password" /></td>
+                  <td><label for="wb-password" bind="passwordLabel"></label></td>
+                  <td><input name="wb-password" type="password" bind="passwordInput" /></td>
                 </tr>
                 <tr>
                   <td><input type="checkbox" name="remember-credentials" /></td>
-                  <td><label for="remember-credentials">Remember credentials (stored unencrypted in OpenRefine's preferences)</label></td>
+                  <td><label for="remember-credentials" bind="rememberCredentialsLabel"></label></td>
                 </tr>
               </table>
             </form>
             <div class="wikibase-login-buttons">
-                <button class="button cancel-button">Close</button>
-                <button class="button button-primary" bind="loginButton">Log in</button>
+                <button class="button cancel-button" bind="cancelButton1"></button>
+                <button class="button button-primary" bind="loginButton"></button>
             </div>
           </div>
           <div class="wikibase-user-logout" bind="logoutArea">
-            <p><span bind="loggedInAs">You are logged in as:</span>
+            <p><span bind="loggedInAs"></span>
                <span bind="loggedInUsername"></span></p>
             <form bind="logoutForm" method="post">
               <input type="hidden" name="wb-username" value="null" />
               <input name="wb-password" type="hidden" value="null" />
             </form>
             <div class="wikibase-login-buttons">
-                <button class="button cancel-button">Cancel</button>
-                <button class="button button-primary" bind="logoutButton">Log out</button>
+                <button class="button cancel-button" bind="cancelButton2"></button>
+                <button class="button button-primary" bind="logoutButton"></button>
             </div>
           </div>
         </div>
