--- a/extensions/wikidata/module/scripts/dialogs/perform-edits-dialog.html
+++ b/extensions/wikidata/module/scripts/dialogs/perform-edits-dialog.html
@@ -6,7 +6,7 @@
     <div class="perform-edits-warnings-area" bind="warningsArea">
     </div>
     <div class="wikibase-perform-edits-area">
-        <p><span bind="loggedInAs"></span> <span bind="loggedInUsername"></span>.</p>
+        <p><span bind="loggedInAs"></span> <a bind="loggedInUsername" target="_blank"></a>.</p>
         <p><span bind="editSummaryLabel"></span> <input type="text" name="editSummary" bind="editSummary" class="edit-summary" value="" /></p>
         <div class="wikibase-login-buttons">
             <button class="button cancel-button" bind="cancelButton"></button>
