Restore preview tab

--- a/extensions/wikidata/module/scripts/schema-alignment-tab.html
+++ b/extensions/wikidata/module/scripts/schema-alignment-tab.html
@@ -1,5 +1,5 @@
 <div id="schema-alignment-tab">
-    <p class="schema-alignment-explanation" bind="dialogExplanation"></p>
+    <p class="panel-explanation" bind="dialogExplanation"></p>
     <div class="schema-alignment-dialog-canvas">
     <div class="schema-alignment-dialog-columns-area">
     </div>
