--- a/extensions/wikidata/module/scripts/preview-tab.html
+++ b/extensions/wikidata/module/scripts/preview-tab.html
@@ -1,5 +1,5 @@
 <div id="schema-preview-tab">
-    <p class="body-text" bind="previewExplanation"></p>
+    <p class="panel-explanation" bind="previewExplanation"></p>
     <div class="invalid-schema-warning" bind="invalidSchemaWarningPreview"></div>
     <div class="schema-alignment-dialog-preview"></div>
 </div>
