Add save and discard buttons on the Wikidata schema

--- a/extensions/wikidata/module/scripts/schema-alignment-tab.html
+++ b/extensions/wikidata/module/scripts/schema-alignment-tab.html
@@ -1,4 +1,5 @@
 <div id="schema-alignment-tab">
+    <div class="schema-alignment-save"><button class="button button-primary" bind="saveButton"></button><button class="button button-primary" bind="discardButton"></button></div>
     <p class="panel-explanation" bind="dialogExplanation"></p>
     <div class="schema-alignment-dialog-canvas">
     <div class="schema-alignment-dialog-columns-area">
