--- a/extensions/wikidata/module/scripts/dialogs/schema-alignment-dialog.html
+++ b/extensions/wikidata/module/scripts/dialogs/schema-alignment-dialog.html
@@ -8,11 +8,13 @@
           <li><a href="#schema-alignment-tabs-preview-edits" bind="editsPreviewTabHeader"></a></li>
       </ul>
       <div id="schema-alignment-tabs-schema">
-          <p class="body-text" bind="dialogExplanation"></p>
-          <div class="schema-alignment-dialog-canvas">
-            <div class="schema-alignment-dialog-columns-area">
+          <div bind="schemaHeader">
+            <p class="body-text" bind="dialogExplanation"></p>
+            <div class="schema-alignment-dialog-columns-area" bind="columnsArea">
             </div>
-            <div class="schema-alignment-dialog-statements-area">
+          </div>
+          <div class="schema-alignment-dialog-canvas" bind="canvas">
+            <div class="schema-alignment-dialog-statements-area" bind="statementsArea">
                 <div id="schema-alignment-statements-container">
                 </div>
                 <div class="wbs-toolbar"><a class="wbs-add-item" bind="addItemButton"></a></div>
