--- a/extensions/wikidata/module/scripts/schema-alignment-tab.html
+++ b/extensions/wikidata/module/scripts/schema-alignment-tab.html
@@ -1,14 +1,17 @@
 <div id="schema-alignment-tab">
-    <div class="schema-alignment-save"><button class="button button-primary" bind="saveButton"></button><button class="button button-primary" bind="discardButton"></button></div>
-    <p class="panel-explanation" bind="dialogExplanation"></p>
-    <div class="schema-alignment-dialog-canvas">
-    <div class="schema-alignment-dialog-columns-area">
-    </div>
-    <div class="schema-alignment-dialog-statements-area">
-        <div id="schema-alignment-statements-container">
+    <div bind="schemaHeader">
+        <div class="schema-alignment-save"><button class="button button-primary" bind="saveButton"></button><button class="button button-primary" bind="discardButton"></button></div>
+        <p class="panel-explanation" bind="dialogExplanation"></p>
+        <div style="clear: right"></div>
+        <div class="schema-alignment-dialog-columns-area" bind="columnsArea">
         </div>
-        <div class="wbs-toolbar"><a class="wbs-add-item" bind="addItemButton"></a></div>
     </div>
+    <div class="schema-alignment-dialog-canvas" bind="canvas">
+        <div class="schema-alignment-dialog-statements-area" bind="statementsArea">
+                <div id="schema-alignment-statements-container">
+                </div>
+                <div class="wbs-toolbar"><a class="wbs-add-item" bind="addItemButton"></a></div>
+        </div>
     </div>
 </div>
 
