--- a/main/webapp/modules/core/scripts/index/default-importing-sources/import-from-computer-form.html
+++ b/main/webapp/modules/core/scripts/index/default-importing-sources/import-from-computer-form.html
@@ -1,5 +1,14 @@
 <form bind="form"><div class="grid-layout layout-normal"><table>
   <tr><td id="or-import-locate-files"></td></tr>
-  <tr><td><input type="file" multiple bind="fileInput" name="upload" /></td></tr>
+  </table>
+  <table>
+  <tr><td>
+  <input type="button" id = "loadFile" bind="fileInputButton" value="load" onclick = "document.getElementById('SelectFileButton').click()">
+  </td><td>
+  <div class = "filesSelectedPar" id = "filesSelectedPar" > </div>
+  </td></tr>
+  
+  
   <tr><td><button bind="nextButton" class="button button-primary" type="button"></button></td></tr>
+ <tr><td><input type="file" multiple bind="fileInput" name="upload" id= "SelectFileButton" style="display:none;" /></td></tr>
 </table></div></form>
